fix: unintended scrollbars

--- a/src/components/Entry/style.module.scss
+++ b/src/components/Entry/style.module.scss
@@ -5,6 +5,7 @@
 	:global(.mantine-Button-label) {
 		flex: 1;
 		color: var(--mantine-color-slate-0);
+		text-overflow: ellipsis;
 	}
 
 	:global(.mantine-Button-section) {
