--- a/src/views/query/TabsPane/style.module.scss
+++ b/src/views/query/TabsPane/style.module.scss
@@ -1,3 +1,8 @@
+.scroller > div {
+	width: 100%;
+    table-layout: fixed;
+}
+
 .query {
 	cursor: pointer !important;
 
